# WSSL_Library

./: CMakeLists.txt  CertificationAuthority  CertificationAuthority.cpp  README.md  citation.cff  cmake_install.cmake  publisher.cpp  subscriber.cpp  tests_wssl_class.xlsx
dataBase/: data_handover.xlsx  delays.csv  logErrors.csv  tests_wssl_class.xlsx
rcvFile/: id  label  sk
rcvFile/knownIdentities/: PK03  SND1
senderFile/: id  label  sk  test2
senderFile/knownIdentities/: PK02  RCV1
src/: CryptoIdentity.cpp  CryptoIdentity.h  lib_wssl.h  libwssl_class.h  safety_entity_rcv.cpp  safety_entity_send.cpp  safety_entity_snd.cpp
